--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/gif" href="https://media.tenor.com/shRY2uZ93dgAAAAi/cartoon-network-escandalosos.gif" />
+		<link rel="icon" type="image/png" href="https://cdn.iconscout.com/icon/premium/png-512-thumb/profile-icon-svg-png-download-4385524.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>%VITE_FULL_NAME% (%VITE_NICKNAME%) | %VITE_TITLE%</title>
