--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<meta property="og:image:height" content="630" />
 		<link rel="preconnect" href="https://docs.google.com" crossorigin />
 		
+		<!-- VCR OSD Mono Font -->
+		<link href="https://fonts.googleapis.com/css2?family=VCR+OSD+Mono&display=swap" rel="stylesheet">
+		
 		<!-- Prevent theme flickering -->
 		<style>
 			html {
